packages/greyalien-prototype/greyalien_prototype-0.3.0.tar.gz/greyalien_prototype-0.3.0/tests/conformance/fail/match_type.grl
fn main() {
  let n = 1;
  let out = match n {
    "one" => { 1; }
    _ => { 0; }
  };
  print(out);
}
